se actualizan algunos archivos

--- a/src/HTML/index.html
+++ b/src/HTML/index.html
@@ -25,11 +25,11 @@
                 </div>
                 <div class="nav__card nav__card--y">
                     <div class="nav__card__icon">
-                        <i class="nav__card__icon2 fa-brands fa-youtube"></i>
+                        <i class="nav__card__icon2 fa-brands fa-vuejs"></i>
                     </div>
                     <div class="nav__card__description">
-                        <p class="nav__card__titulo">canal de youtube</p>
-                        <span class="nav__card__description2">click aqui</span>
+                        <p class="nav__card__titulo">VirtualHost</p>
+                        <a href="virtualHost.html" class="nav__card__description2">click aqui</a>
                     </div>
                 </div>
                 <div class="nav__card nav__card--d">
@@ -37,8 +37,8 @@
                         <i class="nav__card__icon2 fa-brands fa-discord"></i>
                     </div>
                     <div class="nav__card__description">
-                        <p class="nav__card__titulo">canal de discord</p>
-                        <p class="nav__card__description2">click aqui</p>
+                        <p class="nav__card__titulo">Canal de Discord</p>
+                        <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" class="nav__card__description2">click aqui</a>
                 </div>
             </div>
         </nav>
@@ -56,6 +56,21 @@
                     ¡Y Mucho Mas!</span>
                 </p>
             </article>
+
+            <article class="section__article--welcome">
+                <h1 class="section__titulo">próximamente</h1>
+                <p class="section__text">
+                    <span class="rose">
+                        -virtual militar 
+                    </span>
+                    ( servidor Role Play Militar) <br>
+                    <span class="rose">
+                        -Virtual PVP 
+                    </span>
+                    (Servidor PVP estilo libre)
+                </p>
+            </article>
+
         </section>
         <section class="section">
             <article class="section__article">
@@ -123,9 +138,8 @@
     </main>
     <footer class="footer">
         <ul class="ul">
-            <li class="ul__li ul__li--y"> <i class="ul__li__icon fa-brands fa-youtube"></i> <a class="ul__li__a"  href=""> Conoce el Canal de <span class="rose">Youtube</span></a></li>  
-            <li class="ul__li ul__li--d"> <i class="ul__li__icon fa-brands fa-discord"></i> <a class="ul__li__a" href="">Conoce el Canal de <span class="celeste">Discord</span></a></li>  
-            <li class="ul__li ul__li--w"> <i class="ul__li__icon fa-brands fa-whatsapp"></i> <a class="ul__li__a" href="">Escribenos al <span class="rose">WhatsApp</span></a></li>  
+            <li class="ul__li ul__li--y"> <i class="ul__li__icon fa-brands fa-youtube"></i> <p class="ul__li__a"  >Proximamente Canal de <span class="rose">Youtube</span></p></li>  
+            <li class="ul__li ul__li--d"> <i class="ul__li__icon fa-brands fa-discord"></i> <a class="ul__li__a" href="https://discord.com/channels/@me/996264773865967677/996997556284428408">Conoce el Canal de <span class="celeste">Discord</span></a></li>  
         </ul>
     </footer>
 </body>
