--- a/src/HTML/rolesPrivados.html
+++ b/src/HTML/rolesPrivados.html
@@ -25,11 +25,11 @@
                 </div>
                 <div class="nav__card nav__card--y">
                     <div class="nav__card__icon">
-                        <i class="nav__card__icon2 fa-brands fa-youtube"></i>
+                        <i class="nav__card__icon2 fa-brands fa-vuejs"></i>
                     </div>
                     <div class="nav__card__description">
-                        <p class="nav__card__titulo">canal de youtube</p>
-                        <span class="nav__card__description2">click aqui</span>
+                        <p class="nav__card__titulo">VirtualHost</p>
+                        <a href="virtualHost.html" class="nav__card__description2">click aqui</a>
                     </div>
                 </div>
                 <div class="nav__card nav__card--d">
@@ -37,14 +37,14 @@
                         <i class="nav__card__icon2 fa-brands fa-discord"></i>
                     </div>
                     <div class="nav__card__description">
-                        <p class="nav__card__titulo">canal de discord</p>
-                        <p class="nav__card__description2">click aqui</p>
+                        <p class="nav__card__titulo">Canal de Discord</p>
+                        <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" class="nav__card__description2">click aqui</a>
                 </div>
+            </div>
             </div>
         </nav>
     </header>
     <main class="main">
-
         <section class="section--welcome">
             <article class="section__article--welcome">
                 <p class="section__text">
@@ -53,9 +53,7 @@
                 </p>
             </article>
         </section>
-
         <section class="section">
-
             <article class="section__article">
                 <h2 class="section__titulo">
                     Rol Banda VIP
@@ -71,7 +69,7 @@
                     <li class="section__ul__li">Permiso Para Secuestros, Manifestaciones Armadas y Robos a Bancos</li>
                     <li class="section__ul__li">precio: <span class="rose">6 dolares</span></li>
                 </ul>
-                <a href="vip.html" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -94,7 +92,7 @@
                     <li class="section__ul__li">Permiso Para Secuestros, Manifestaciones Armmadas y Robos</li>
                     <li class="section__ul__li">precio: <span class="rose">15 dolares</span></li>
                 </ul>
-                <a href="rolesPrivados.html" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -120,7 +118,7 @@
                     <li class="section__ul__li">Permiso para Secuestros, Manifestaciones armadas, Robos a Banco y Robos a Casino</li>   
                     <li class="section__ul__li">precio: <span class="rose">20 dolares</span></li>
                 </ul>
-                <a href="mantenimiento.html" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -149,7 +147,7 @@
                     <li class="section__ul__li">permiso para comprar vehículos armados hasta de grado 2</li> 
                     <li class="section__ul__li">precio: <span class="rose">28 dolares</span></li>
                 </ul>
-                <a href="virtualHost.html" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -179,7 +177,7 @@
                     <li class="section__ul__li">permiso para comprar vehículos armados hasta de grado 4</li>  
                     <li class="section__ul__li">precio: <span class="rose">38 dolares</span></li>  
                 </ul>
-                <a href="#" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -193,7 +191,7 @@
                     <li class="section__ul__li">Puedes ser contratado para todo tipo de ayuda criminal</li>  
                     <li class="section__ul__li">precio: <span class="rose">8 dolares</span></li>                  
                 </ul>
-                <a href="#" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -210,7 +208,7 @@
                     <li class="section__ul__li">5 pistolas automáticas de regalo a elección + 20 cargadores</li>
                     <li class="section__ul__li">precio: <span class="rose">8 dolares</span></li>          
                 </ul>
-                <a href="#" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -230,7 +228,7 @@
                     <li class="section__ul__li">podrás comprar autos armados de grado 1</li> 
                     <li class="section__ul__li">precio: <span class="rose">12 dolares</span></li>             
                 </ul>
-                <a href="#" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -244,7 +242,7 @@
                     <li class="section__ul__li">2 pistolas automáticas + 8 cargadores</li>                        
                     <li class="section__ul__li">precio: <span class="rose">2 dolares</span></li>  
                 </ul>
-                <a href="#" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -261,9 +259,8 @@
                     <li class="section__ul__li">paga de 350k por caso completado correctamente</li> 
                     <li class="section__ul__li">precio: <span class="rose">8 dolares</span></li>  
                 </ul>
-                <a href="#" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
-
             <article class="section__article">
                 <h2 class="section__titulo">
                     Rol Geof ( fuerzas especiales )
@@ -278,7 +275,7 @@
                     <li class="section__ul__li">serás asignado como sargento</li>
                     <li class="section__ul__li">precio: <span class="rose">7 dolares</span></li>       
                 </ul>
-                <a href="#" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -295,7 +292,7 @@
                     <li class="section__ul__li">podrás trabajar como piloto de la policía / Geof / Spetsnaz con pruebas respectivas</li> 
                     <li class="section__ul__li">precio: <span class="rose">5 dolares</span></li>              
                 </ul>
-                <a href="#" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -311,7 +308,7 @@
                     <li class="section__ul__li">podrás trabajar como Guardia para altos funcionarios políticos, policiales o cualquier persona que requiera de tus servicios</li>                        
                     <li class="section__ul__li">precio: <span class="rose">5 dolares</span></li>  
                 </ul>
-                <a href="#" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -329,7 +326,7 @@
                     <li class="section__ul__li">podrás trabajar como Guardia-VIP para altos funcionarios políticos, policiales o cualquier persona que requiera de tus servicios</li> 
                     <li class="section__ul__li">precio: <span class="rose">10 dolares</span></li>                 
                 </ul>
-                <a href="#" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -346,7 +343,7 @@
                     <li class="section__ul__li">podrás comprar vehículos armados hasta de grado 4</li> 
                     <li class="section__ul__li">precio: <span class="rose">35 dolares</span></li>            
                 </ul>
-                <a href="#" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -370,7 +367,7 @@
                     <li class="section__ul__li">PD2: los Guardias del casino NO serán contados como policías al momento de querer hacer un atraco</li> 
                     <li class="section__ul__li">precio: <span class="rose">30 dolares</span></li>          
                 </ul>
-                <a href="#" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -387,7 +384,7 @@
                     <li class="section__ul__li">permiso para hacer el rol de sacar órganos con un bisturí especial</li> 
                     <li class="section__ul__li">precio: <span class="rose">6 dolares</span></li>                 
                 </ul>
-                <a href="#" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -425,7 +422,7 @@
                     <li class="section__ul__li">permiso para allanar a civiles, grupos delictivos y a fuerzas civiles ( con permiso de un admin )</li>
                     <li class="section__ul__li">precio: <span class="rose">60 dolares</span></li>           
                 </ul>
-                <a href="#" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -444,15 +441,14 @@
                     <li class="section__ul__li">PD: Cada Stealy Wheely tiene una probabilidad del 10% de desbloquear el vehículo que intentas robar por lo que aproximadamente 1 de cada 10 abrirá un auto ademas de alertar a la policía cada vez que se usa</li> 
                     <li class="section__ul__li">precio: <span class="rose">15 dolares</span></li>             
                 </ul>
-                <a href="#" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
         </section>
     </main>
     <footer class="footer">
         <ul class="ul">
-            <li class="ul__li ul__li--y"> <i class="ul__li__icon fa-brands fa-youtube"></i> <a class="ul__li__a"  href=""> Conoce el Canal de <span class="rose">Youtube</span></a></li>  
-            <li class="ul__li ul__li--d"> <i class="ul__li__icon fa-brands fa-discord"></i> <a class="ul__li__a" href="">Conoce el Canal de <span class="celeste">Discord</span></a></li>  
-            <li class="ul__li ul__li--w"> <i class="ul__li__icon fa-brands fa-whatsapp"></i> <a class="ul__li__a" href="">Escribenos al <span class="rose">WhatsApp</span></a></li>  
+            <li class="ul__li ul__li--y"> <i class="ul__li__icon fa-brands fa-youtube"></i> <p class="ul__li__a"  >Proximamente Canal de <span class="rose">Youtube</span></p></li>  
+            <li class="ul__li ul__li--d"> <i class="ul__li__icon fa-brands fa-discord"></i> <a class="ul__li__a" href="https://discord.com/channels/@me/996264773865967677/996997556284428408">Conoce el Canal de <span class="celeste">Discord</span></a></li>  
         </ul>
     </footer>
 </body>
