--- a/src/HTML/vip.html
+++ b/src/HTML/vip.html
@@ -19,17 +19,17 @@
                     <i class="nav__bar__icon2 fa-solid fa-house"></i>
                 </a>
             </div>
-            <div class="nav__body">
+            </div>   <div class="nav__body">
                 <div class="nav__image-logo">
                     <img class="nav__image-logo2" src="/src/img/logo1.png" alt="logotipo">
                 </div>
                 <div class="nav__card nav__card--y">
                     <div class="nav__card__icon">
-                        <i class="nav__card__icon2 fa-brands fa-youtube"></i>
+                        <i class="nav__card__icon2 fa-brands fa-vuejs"></i>
                     </div>
                     <div class="nav__card__description">
-                        <p class="nav__card__titulo">canal de youtube</p>
-                        <span class="nav__card__description2">click aqui</span>
+                        <p class="nav__card__titulo">VirtualHost</p>
+                        <a href="virtualHost.html" class="nav__card__description2">click aqui</a>
                     </div>
                 </div>
                 <div class="nav__card nav__card--d">
@@ -37,8 +37,8 @@
                         <i class="nav__card__icon2 fa-brands fa-discord"></i>
                     </div>
                     <div class="nav__card__description">
-                        <p class="nav__card__titulo">canal de discord</p>
-                        <p class="nav__card__description2">click aqui</p>
+                        <p class="nav__card__titulo">Canal de Discord</p>
+                        <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" class="nav__card__description2">click aqui</a>
                 </div>
             </div>
         </nav>
@@ -67,7 +67,7 @@
                     <li class="section__ul__li">acceso a canales exclusivos</li>
                     <li class="section__ul__li">precio: <span class="rose">2 dolares</span></li>
                 </ul>
-                <a href="#" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -85,7 +85,7 @@
                     <li class="section__ul__li">Rango VIP Media-Alta en el discord</li>
                     <li class="section__ul__li">acceso a canales exclusivos</li>
                     <li class="section__ul__li">precio: <span class="rose">5 dolares</span></li>                           </ul>
-                <a href="#" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -105,7 +105,7 @@
                     <li class="section__ul__li">acceso a canales exclusivos</li> 
                     <li class="section__ul__li">precio: <span class="rose">10 dolares</span></li>              
                 </ul>
-                <a href="#" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -123,7 +123,7 @@
                     <li class="section__ul__li">Rango en discord VIP Millonario</li> 
                     <li class="section__ul__li">precio: <span class="rose">15 dolares</span></li>
                 </ul>
-                <a href="#" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -145,7 +145,7 @@
                     <li class="section__ul__li">Rango en discord VIP Narcotraficante</li>
                     <li class="section__ul__li">precio: <span class="rose">22 dolares</span></li>      
                 </ul>
-                <a href="#" class="section__button" type="">Comprar</a>
+                <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -169,15 +169,14 @@
                     <li class="section__ul__li">Rango en discord VIP Magnate/li>
                     <li class="section__ul__li">precio: <span class="rose">30 dolares</span></li>
                 </ul>
-                    <a href="#" class="section__button" type="">Comprar</a>
+                    <a href="https://discord.com/channels/@me/996264773865967677/996997556284428408" target="_blank" class="section__button" type="">Comprar</a>
             </article>
         </section>
     </main>
     <footer class="footer">
         <ul class="ul">
-            <li class="ul__li ul__li--y"> <i class="ul__li__icon fa-brands fa-youtube"></i> <a class="ul__li__a"  href=""> Conoce el Canal de <span class="rose">Youtube</span></a></li>  
-            <li class="ul__li ul__li--d"> <i class="ul__li__icon fa-brands fa-discord"></i> <a class="ul__li__a" href="">Conoce el Canal de <span class="celeste">Discord</span></a></li>  
-            <li class="ul__li ul__li--w"> <i class="ul__li__icon fa-brands fa-whatsapp"></i> <a class="ul__li__a" href="">Escribenos al <span class="rose">WhatsApp</span></a></li>  
+            <li class="ul__li ul__li--y"> <i class="ul__li__icon fa-brands fa-youtube"></i> <p class="ul__li__a"  >Proximamente Canal de <span class="rose">Youtube</span></p></li>  
+            <li class="ul__li ul__li--d"> <i class="ul__li__icon fa-brands fa-discord"></i> <a class="ul__li__a" href="https://discord.com/channels/@me/996264773865967677/996997556284428408">Conoce el Canal de <span class="celeste">Discord</span></a></li>  
         </ul>
     </footer>
 </body>
